[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Entities/Items/StaticObject/StaticObject.gd" type="Script" id=1]
[ext_resource path="res://assets/maps/objects.tres" type="Texture" id=2]

[node name="StaticObject" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true

[node name="CollisionShape" type="CollisionPolygon2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShapeArea" type="CollisionPolygon2D" parent="Area2D"]

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
